# FurryArtSync

./: main.py  pyproject.toml
furry_art_sync/: datastore.py  tool.py
furry_art_sync/sites/: post.py  post_match.py  site.py  site_furaffinity.py  site_weasyl.py
