[tool.poetry]
name = "furryartsync"
version = "0.1.0"
description = "A tool to synchronise art galleries across furry art websites"
authors = ["Deer-Spangle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
